--- a/covid19.css
+++ b/covid19.css
@@ -58,7 +58,7 @@ body{
 }
 
 #table{    
-    max-height: 500px;
+    max-height: 400px;
     border-collapse: collapse;
     display: block;
     overflow: scroll;
@@ -105,12 +105,24 @@ tr:hover{
 }
 
 .margin-Top{
-    margin-top: 15px;
+    margin-top: 30px;
 }
 @media (max-width:740px){
     #table{
         max-height: 350px;
-        max-width: 450px;
+        max-width: 380px;
     }
+    #recoverChart{
+    width: 280px;
+    }   
+
+    .video{
+        width: 350px;
+    }
+    .boxDecoration:hover{
+        transform: none;
+        box-shadow: none;   
+    }
+
 
 }
