--- a/covid19.css
+++ b/covid19.css
@@ -58,7 +58,7 @@ body{
 }
 
 #table{    
-    max-height: 500px;
+    min-height: 500px;
     border-collapse: collapse;
     display: block;
     overflow: scroll;
