--- a/covid19.css
+++ b/covid19.css
@@ -116,7 +116,7 @@ tr:hover{
         width:280px;
     }
     #deadChart{
-        width:280x;
+        width:280px;
     }
     
     #recoverChart{
